<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.osmeuslugares.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/acerca_de"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/acerca_de"/>
    <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/salir"/>
    <item 
        android:id="@+id/listLugares" 
        android:title="@string/listLugares">
    </item>
    
    <item 
        android:id="@+id/listCategorias" 
        android:title="@string/list_categorias">
    </item>

</menu>
